# plotchat

./: README.md  pyproject.toml
src/plotchat/: ai.py  capture.py  img2base64.py  main.py  ocr.py  ocr_ai.py  svg.py
